--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-image: url;
     color: #000305;
     font-size: 87.85%
-    font-family : 'Raleway';
+    font-family : Arial;
     line-height: 1.5;
 }
 
@@ -33,9 +33,6 @@ a:hover, a:active {
 .mainheader nav {
     background-color: #666;
     height: 40px;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
 }
 
 .mainheader nav ul {
@@ -43,8 +40,9 @@ a:hover, a:active {
     margin: 0 auto;
 }
 .mainheader ul li {
-    float: left;
-    display: inline;
+    
+    width: 100%;
+    text-align: center;
 }
 .mainheader nav a:link, .mainheader nav a:visited {
     color: #FFF;
@@ -86,7 +84,33 @@ a:hover, a:active {
 }
 
 .top-sidebar {
-    width: 25%;
+    width: 27%;
     float: left;
     background-color: #FFF;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    padding: 2% 2%;
+    margin-left: 3%;
+    margin-bottom: 1%;
+    margin-top: 3%;
+    margin: 5% 0 1% 2%;
+}
+
+.mainFooter {
+    width: 100%
+    float: left;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    background-color: #666;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.mainFooter p {
+    width: 92%;
+    margin: 2%;
+    color: #FFF;
+    
 }
