--- a/styles.css
+++ b/styles.css
@@ -32,24 +32,32 @@ a:hover, a:active {
 
 .mainheader nav {
     background-color: #666;
-    height: 40px;
+    height: 25px;
+    list-style-type: none;
+    overflow: hidden;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
-
+.mainheader nav li a {
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 .mainheader nav ul {
     list-style: none;
     margin: 0 auto;
+    float: left;
+    display: inline-block;
 }
 .mainheader ul li {
     width: 100%;
-    text-align: center;
-    float: left;
-    display: inline;
 }
 .mainheader nav a:link, .mainheader nav a:visited {
     color: #FFF;
-    display: inline-block;
-    padding: 10px 25px;
-    height:
+    padding: 1px 35px;
+    height: 10px;
 }
 .mainheader nav a:hover, .mainheader nav a:active,
 .mainheader nav .active a:link, .mainheader nav .active a:visisted {
